# CI

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  bb.c  bb.h  bitbucket-pipelines.yml  circle.c  circle.h  cunit_tests.c  main.c  point.c  point.h  sieve.c  sieve.h
.github/workflows/: main.yml  mainCI.yml
